--- a/option3-2.html
+++ b/option3-2.html
@@ -65,7 +65,7 @@
                 ""><i class="icon-menu"></i>Menu</a>
 
                 <nav class="main-header__top-nav">
-                    <a href="">Cymraeg</a> <a class=
+                    <a href="#">Cymraeg</a> <a class=
                     "hide-offline main-header__login" href=""><i class=
                     "icon-key"></i>Sign-in</a>
                 </nav>
@@ -90,56 +90,56 @@
     "overflow: visible;">
         <ul class="nav-list-primary">
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Benefits</a>
+                <a href="#">Benefits</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Work</a>
+                <a href="#">Work</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Debt and money</a>
+                <a href="#">Debt and money</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Consumer</a>
+                <a href="#">Consumer</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Relationships</a>
+                <a href="#">Relationships</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Housing</a>
+                <a href="#">Housing</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Law and rights</a>
+                <a href="#">Law and rights</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Discrimination</a>
+                <a href="#">Discrimination</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Tax</a>
+                <a href="#">Tax</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Healthcare</a>
+                <a href="#">Healthcare</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Education</a>
+                <a href="#">Education</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">More from us</a>
+                <a href="#">More from us</a>
             </li>
 
             <li class="nav-list-primary-more js-more-menu" style=
             "display: none;">
-                <a href="">More<i class="icon-down"></i></a>
+                <a href="#">More<i class="icon-down"></i></a>
                 <ul class="main-nav__more-links"></ul>
             </li>
         </ul>
@@ -148,7 +148,7 @@
     <div class="main-container">
         <nav class="main-breadcrumb" data-track-zone="breadcrumb">
             <div class="main-breadcrumb__content breadcrumb">
-                <a href="">England <i class="icon-down"></i></a>
+                <a href="#">England <i class="icon-down"></i></a>
 
                 <div class=
                 "breadcrumb__extent-popup js-extent-popup hide hide-offline"
@@ -157,7 +157,7 @@
 
                     <ul class="arrow-list">
                         <li>
-                            <a href="">England home</a>
+                            <a href="#">England home</a>
                         </li>
                     </ul>
 
@@ -167,15 +167,15 @@
 
                     <ul class="arrow-list">
                         <li>
-                            <a href="">Northern Ireland home</a>
+                            <a href="#">Northern Ireland home</a>
                         </li>
 
                         <li>
-                            <a href="">Scotland home</a>
+                            <a href="#">Scotland home</a>
                         </li>
 
                         <li>
-                            <a href="">Wales home</a>
+                            <a href="#">Wales home</a>
                         </li>
                     </ul>
                 </div>
@@ -188,7 +188,7 @@
 
             <div class="section-notice__content">
                 <p><span class="badge">NEW</span>&nbsp;This page is part of
-                <a href="">our new approach to digital advice</a>.</p>
+                <a href="#">our new approach to digital advice</a>.</p>
             </div>
         </aside>
 
@@ -235,9 +235,9 @@
                             <ul>
                                 <li>a registered gas engineer for gas work, eg installing a boiler or cooker</li>
 
-                                <li>a registered electrician for electrical work, eg installing new lighting or rewiring</li>
+                                <li>a <a href="#">registered electrician</a> for electrical work, eg installing new lighting or rewiring</li>
 
-                                <li>someone in a competent person scheme for work that needs building regulations approval (unless you got approval yourself)</li>
+                                <li>someone in a <a href="#">competent person scheme</a> for work that needs building regulations approval (unless you got approval yourself)</li>
                             </ul>
 
                             <div class="callout">
@@ -267,9 +267,9 @@
                             <ul>
                                 <li>ask to see a business card or letterhead, or get full contact details, then ring the business to check it exists and the contractor works for them</li>
 
-                                <li>ask to see proof of qualifications - eg an NVQ in construction for builders or a card from the Construction Skills Certification Scheme (trade associations can tell you about qualifications for particular types of work)</li>
+                                <li>ask to see proof of qualifications - eg an NVQ in construction for builders or a <a href="#">card from the Construction Skills Certification Scheme</a> (trade associations can tell you about qualifications for particular types of work)</li>
 
-                                <li>search trade association websites to check they’re a member if they say they are</li>
+                                <li>search <a href="#">trade association</a> websites to check they’re a member if they say they are</li>
                             </ul>
 
                             <div class="callout">
@@ -287,7 +287,7 @@
                             <ul>
                                 <li>a clear and detailed description of exactly what you want done</li>
 
-                                <li>a list of questions to help you get all the information you need to compare and choose between contractors - Trustmark has questions you can use as a checklist</li>
+                                <li>a list of questions to help you get all the information you need to compare and choose between contractors - Trustmark has <a href="#">questions you can use as a checklist</a></li>
                             </ul>
 
                             <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p>
@@ -454,7 +454,7 @@
         <h2 class="screenreader">Feedback</h2>
 
         <div class="footer-feedback__content">
-            <p>Is there anything wrong with this page? <a href="">Let us
+            <p>Is there anything wrong with this page? <a href="#">Let us
             know</a>.&nbsp;</p>
         </div>
     </aside>
@@ -466,51 +466,51 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">Benefits</a>
+                        <a href="#">Benefits</a>
                     </li>
 
                     <li>
-                        <a href="">Work</a>
+                        <a href="#">Work</a>
                     </li>
 
                     <li>
-                        <a href="">Debt and money</a>
+                        <a href="#">Debt and money</a>
                     </li>
 
                     <li>
-                        <a href="">Consumer</a>
+                        <a href="#">Consumer</a>
                     </li>
 
                     <li>
-                        <a href="">Relationships</a>
+                        <a href="#">Relationships</a>
                     </li>
 
                     <li>
-                        <a href="">Housing</a>
+                        <a href="#">Housing</a>
                     </li>
 
                     <li>
-                        <a href="">Law and rights</a>
+                        <a href="#">Law and rights</a>
                     </li>
 
                     <li>
-                        <a href="">Discrimination</a>
+                        <a href="#">Discrimination</a>
                     </li>
 
                     <li>
-                        <a href="">Tax</a>
+                        <a href="#">Tax</a>
                     </li>
 
                     <li>
-                        <a href="">Healthcare</a>
+                        <a href="#">Healthcare</a>
                     </li>
 
                     <li>
-                        <a href="">Education</a>
+                        <a href="#">Education</a>
                     </li>
 
                     <li>
-                        <a href="">A to Z of advice</a>
+                        <a href="#">A to Z of advice</a>
                     </li>
                 </ul>
             </div>
@@ -520,15 +520,15 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">Budgeting tool</a>
+                        <a href="#">Budgeting tool</a>
                     </li>
 
                     <li>
-                        <a href="">Advice fact sheets</a>
+                        <a href="#">Advice fact sheets</a>
                     </li>
 
                     <li>
-                        <a href="">Advice online, by phone and in person</a>
+                        <a href="#">Advice online, by phone and in person</a>
                     </li>
                 </ul>
             </div>
@@ -538,47 +538,47 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">About us</a>
+                        <a href="#">About us</a>
                     </li>
 
                     <li>
-                        <a href="">Annual reports</a>
+                        <a href="#">Annual reports</a>
                     </li>
 
                     <li>
-                        <a href="">Contact us</a>
+                        <a href="#">Contact us</a>
                     </li>
 
                     <li>
-                        <a href="">Complaints</a>
+                        <a href="#">Complaints</a>
                     </li>
 
                     <li>
-                        <a href="">Blogs</a>
+                        <a href="#">Blogs</a>
                     </li>
 
                     <li>
-                        <a href="">Campaigns</a>
+                        <a href="#">Campaigns</a>
                     </li>
 
                     <li>
-                        <a href="">Media</a>
+                        <a href="#">Media</a>
                     </li>
 
                     <li>
-                        <a href="">Policy research</a>
+                        <a href="#">Policy research</a>
                     </li>
 
                     <li>
-                        <a href="">Support us</a>
+                        <a href="#">Support us</a>
                     </li>
 
                     <li>
-                        <a href="">Volunteering</a>
+                        <a href="#">Volunteering</a>
                     </li>
 
                     <li>
-                        <a href="">Jobs</a>
+                        <a href="#">Jobs</a>
                     </li>
                 </ul>
             </div>
@@ -588,31 +588,31 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">How we provide advice</a>
+                        <a href="#">How we provide advice</a>
                     </li>
 
                     <li>
-                        <a href="">The difference we make</a>
+                        <a href="#">The difference we make</a>
                     </li>
 
                     <li>
-                        <a href="">Support us</a>
+                        <a href="#">Support us</a>
                     </li>
 
                     <li>
-                        <a href="">How Citizens Advice works</a>
+                        <a href="#">How Citizens Advice works</a>
                     </li>
 
                     <li>
-                        <a href="">Accessibility</a>
+                        <a href="#">Accessibility</a>
                     </li>
 
                     <li>
-                        <a href="">Disclaimer and copyright</a>
+                        <a href="#">Disclaimer and copyright</a>
                     </li>
 
                     <li>
-                        <a href="">Privacy and cookies</a>
+                        <a href="#">Privacy and cookies</a>
                     </li>
                 </ul>
             </div>
