--- a/option3-5.html
+++ b/option3-5.html
@@ -65,7 +65,7 @@
                 ""><i class="icon-menu"></i>Menu</a>
 
                 <nav class="main-header__top-nav">
-                    <a href="">Cymraeg</a> <a class=
+                    <a href="#">Cymraeg</a> <a class=
                     "hide-offline main-header__login" href=""><i class=
                     "icon-key"></i>Sign-in</a>
                 </nav>
@@ -90,56 +90,56 @@
     "overflow: visible;">
         <ul class="nav-list-primary">
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Benefits</a>
+                <a href="#">Benefits</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Work</a>
+                <a href="#">Work</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Debt and money</a>
+                <a href="#">Debt and money</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Consumer</a>
+                <a href="#">Consumer</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Relationships</a>
+                <a href="#">Relationships</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Housing</a>
+                <a href="#">Housing</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Law and rights</a>
+                <a href="#">Law and rights</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Discrimination</a>
+                <a href="#">Discrimination</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Tax</a>
+                <a href="#">Tax</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Healthcare</a>
+                <a href="#">Healthcare</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">Education</a>
+                <a href="#">Education</a>
             </li>
 
             <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="">More from us</a>
+                <a href="#">More from us</a>
             </li>
 
             <li class="nav-list-primary-more js-more-menu" style=
             "display: none;">
-                <a href="">More<i class="icon-down"></i></a>
+                <a href="#">More<i class="icon-down"></i></a>
                 <ul class="main-nav__more-links"></ul>
             </li>
         </ul>
@@ -148,7 +148,7 @@
     <div class="main-container">
         <nav class="main-breadcrumb" data-track-zone="breadcrumb">
             <div class="main-breadcrumb__content breadcrumb">
-                <a href="">England <i class="icon-down"></i></a>
+                <a href="#">England <i class="icon-down"></i></a>
 
                 <div class=
                 "breadcrumb__extent-popup js-extent-popup hide hide-offline"
@@ -157,7 +157,7 @@
 
                     <ul class="arrow-list">
                         <li>
-                            <a href="">England home</a>
+                            <a href="#">England home</a>
                         </li>
                     </ul>
 
@@ -167,15 +167,15 @@
 
                     <ul class="arrow-list">
                         <li>
-                            <a href="">Northern Ireland home</a>
+                            <a href="#">Northern Ireland home</a>
                         </li>
 
                         <li>
-                            <a href="">Scotland home</a>
+                            <a href="#">Scotland home</a>
                         </li>
 
                         <li>
-                            <a href="">Wales home</a>
+                            <a href="#">Wales home</a>
                         </li>
                     </ul>
                 </div>
@@ -188,7 +188,7 @@
 
             <div class="section-notice__content">
                 <p><span class="badge">NEW</span>&nbsp;This page is part of
-                <a href="">our new approach to digital advice</a>.</p>
+                <a href="#">our new approach to digital advice</a>.</p>
             </div>
         </aside>
 
@@ -323,9 +323,9 @@
                             <p>It can help to look at example contracts, or create a contract using a template - eg for:</p>
 
                             <ul>
-                                <li>home repairs or maintenance - you can download a free contract template</li>
+                                <li>home repairs or maintenance - you can <a href="#">download a free contract template</a></li>
 
-                                <li>building work - you can download an example contract or buy a contract template</li>
+                                <li>building work - you can <a href="#">download an example contract</a> or <a href="#">buy a contract template</a></li>
                             </ul>
 
                             <div class="callout">
@@ -335,7 +335,7 @@
                             <div class="callout--yellow">
                                 <h3>Further help</h3>
 
-                                <p>Contact the Citizens Advice consumer helpline if you need more help - a trained adviser can give you advice over the phone or by email.</p>
+                                <p>Contact the <a href="#">Citizens Advice consumer helpline</a> if you need more help - a trained adviser can give you advice over the phone or by email. Contact the Consumerline if you're in <a href="#">Northern Ireland</a>.
                             </div>
                     </div>
                     <div class="steps">
@@ -490,7 +490,7 @@
         <h2 class="screenreader">Feedback</h2>
 
         <div class="footer-feedback__content">
-            <p>Is there anything wrong with this page? <a href="">Let us
+            <p>Is there anything wrong with this page? <a href="#">Let us
             know</a>.&nbsp;</p>
         </div>
     </aside>
@@ -502,51 +502,51 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">Benefits</a>
+                        <a href="#">Benefits</a>
                     </li>
 
                     <li>
-                        <a href="">Work</a>
+                        <a href="#">Work</a>
                     </li>
 
                     <li>
-                        <a href="">Debt and money</a>
+                        <a href="#">Debt and money</a>
                     </li>
 
                     <li>
-                        <a href="">Consumer</a>
+                        <a href="#">Consumer</a>
                     </li>
 
                     <li>
-                        <a href="">Relationships</a>
+                        <a href="#">Relationships</a>
                     </li>
 
                     <li>
-                        <a href="">Housing</a>
+                        <a href="#">Housing</a>
                     </li>
 
                     <li>
-                        <a href="">Law and rights</a>
+                        <a href="#">Law and rights</a>
                     </li>
 
                     <li>
-                        <a href="">Discrimination</a>
+                        <a href="#">Discrimination</a>
                     </li>
 
                     <li>
-                        <a href="">Tax</a>
+                        <a href="#">Tax</a>
                     </li>
 
                     <li>
-                        <a href="">Healthcare</a>
+                        <a href="#">Healthcare</a>
                     </li>
 
                     <li>
-                        <a href="">Education</a>
+                        <a href="#">Education</a>
                     </li>
 
                     <li>
-                        <a href="">A to Z of advice</a>
+                        <a href="#">A to Z of advice</a>
                     </li>
                 </ul>
             </div>
@@ -556,15 +556,15 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">Budgeting tool</a>
+                        <a href="#">Budgeting tool</a>
                     </li>
 
                     <li>
-                        <a href="">Advice fact sheets</a>
+                        <a href="#">Advice fact sheets</a>
                     </li>
 
                     <li>
-                        <a href="">Advice online, by phone and in person</a>
+                        <a href="#">Advice online, by phone and in person</a>
                     </li>
                 </ul>
             </div>
@@ -574,47 +574,47 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">About us</a>
+                        <a href="#">About us</a>
                     </li>
 
                     <li>
-                        <a href="">Annual reports</a>
+                        <a href="#">Annual reports</a>
                     </li>
 
                     <li>
-                        <a href="">Contact us</a>
+                        <a href="#">Contact us</a>
                     </li>
 
                     <li>
-                        <a href="">Complaints</a>
+                        <a href="#">Complaints</a>
                     </li>
 
                     <li>
-                        <a href="">Blogs</a>
+                        <a href="#">Blogs</a>
                     </li>
 
                     <li>
-                        <a href="">Campaigns</a>
+                        <a href="#">Campaigns</a>
                     </li>
 
                     <li>
-                        <a href="">Media</a>
+                        <a href="#">Media</a>
                     </li>
 
                     <li>
-                        <a href="">Policy research</a>
+                        <a href="#">Policy research</a>
                     </li>
 
                     <li>
-                        <a href="">Support us</a>
+                        <a href="#">Support us</a>
                     </li>
 
                     <li>
-                        <a href="">Volunteering</a>
+                        <a href="#">Volunteering</a>
                     </li>
 
                     <li>
-                        <a href="">Jobs</a>
+                        <a href="#">Jobs</a>
                     </li>
                 </ul>
             </div>
@@ -624,31 +624,31 @@
 
                 <ul class="li--arrow">
                     <li>
-                        <a href="">How we provide advice</a>
+                        <a href="#">How we provide advice</a>
                     </li>
 
                     <li>
-                        <a href="">The difference we make</a>
+                        <a href="#">The difference we make</a>
                     </li>
 
                     <li>
-                        <a href="">Support us</a>
+                        <a href="#">Support us</a>
                     </li>
 
                     <li>
-                        <a href="">How Citizens Advice works</a>
+                        <a href="#">How Citizens Advice works</a>
                     </li>
 
                     <li>
-                        <a href="">Accessibility</a>
+                        <a href="#">Accessibility</a>
                     </li>
 
                     <li>
-                        <a href="">Disclaimer and copyright</a>
+                        <a href="#">Disclaimer and copyright</a>
                     </li>
 
                     <li>
-                        <a href="">Privacy and cookies</a>
+                        <a href="#">Privacy and cookies</a>
                     </li>
                 </ul>
             </div>
