--- a/index.html
+++ b/index.html
@@ -1251,11 +1251,15 @@
                             <a href="option2.html" class="callout__link">Option 2</a>
                             <a href="option3.html" class="callout__link">Option 3</a>
                         </div>
-                        <h2>C30</h2>
+                        <!--<h2>C30</h2>
                         <div class="callout--turquoise">
                             <a href="c30.html" class="callout__link">Option 1</a>
                             <a href="c30-option2.html" class="callout__link">Option 2</a>
                             <a href="c17.html" class="callout__link">Option 2 (C17)</a>
+                        </div>-->
+                        <h2>C17</h2>
+                        <div class="callout--turquoise">
+                            <a href="c17.html" class="callout__link">Option 1</a>
                         </div>
                     </div>
                 </div>
