--- a/c17.html
+++ b/c17.html
@@ -448,21 +448,27 @@
                                     </ul>
                                 </p>
 
+                                <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">If you can’t come to an agreement</a>
+                                </div>
+
                                 <a class="collapse-toggle-close">Close</a>
                             </div>
 
 
 
-                            <div class="collapse-toggle"><!--Step 7-->
+                            <!-- Step 7 --><!--<div class="collapse-toggle">
                                 <strong>They aren’t properly qualified</strong>
                             </div>
                             <div class="collapse-content" id="step5">
                                 <div class="callout--warning callout--border">
                                     <p>It’s really important that you report them to Trading Standards if they’re being dishonest about their qualifications</p>
                                 </div>
+
+                                <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">If you can’t come to an agreement</a>
+                                </div>
                             
                                 <a class="collapse-toggle-close">Close</a>
-                            </div>
+                            </div>-->
 
 
                         </div><!-- Collapse group end -->
