--- a/index.html
+++ b/index.html
@@ -1250,6 +1250,8 @@
                             <a href="option1.html" class="callout__link">Option 1</a>
                             <a href="option2.html" class="callout__link">Option 2</a>
                             <a href="option3.html" class="callout__link">Option 3</a>
+                            <a href="option3-1.html" class="callout__link">Option 3A</a>
+                            <a href="option3-3.html" class="callout__link">Option 3C</a>
                         </div>
                         <!--<h2>C30</h2>
                         <div class="callout--turquoise">
