--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
 
-    <title>Testing</title>
+    <title>UX Research</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
     <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
     <meta content="EWS" name="cab-extent">
@@ -1221,7 +1221,7 @@
                         </li>
                     </ul>
                 </div><span class="breadcrumb__item"> <span class="breadcrumb__item"><i class=
-                "icon-guillemet-right"></i> <a>Testing</a></span>
+                "icon-guillemet-right"></i> <a>Research</a></span>
             </div>
         </nav>
 
@@ -1241,7 +1241,7 @@
 
                 <div class="title">
                     <h1 class="title__heading js-ref"><span class=
-                    "title__title">Design testing</span></h1>
+                    "title__title">Research</span></h1>
                 </div>
                 <div class="articleContent">
                     <div>
