--- a/option3-4.html
+++ b/option3-4.html
@@ -19,7 +19,7 @@
     <link href="css/option3.css" media="screen" rel="stylesheet">
     <link href="css/accordion.css" rel="stylesheet"><!-- Accordion styles -->
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
 
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
