Incorporated mobile sticky nav
- Incorporated mobile sticky nav into main less
- Tidied syntax
- Fixed JS bugs
- Renamed option2 > consumer-nav

--- a/public/consumer-nav.html
+++ b/public/consumer-nav.html
@@ -15,7 +15,6 @@
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
     <link href="css/main.css" media="screen" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
-    <link href="css/option2.css" media="screen" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
@@ -150,7 +149,7 @@
                             <a href="#">Wales home</a>
                         </li>
                     </ul>
-                </div><span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a href="index.html">Consumer</a></span> <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a>Before you get work done on your home</a></span>
+                </div><span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a href="#">Consumer</a></span> <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a>Before you get work done on your home</a></span>
             </div>
         </nav>
 
@@ -193,37 +192,37 @@
                             <li><strong>Be prepared to deal with problems</strong><br>
                             Speak to contractors as soon as problems come up, and get them to agree to put them right.</li>
                         </ol>-->
-                        <div class="steps">
+                        <div id="overview" class="steps">
                             <h4>Steps in this guide</h4>
                             <a href="#step1">
                                 <span class="steps--number">1</span>
-                                <strong>Check if you need permission or approval</strong></br>
-                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.
+                                <p><strong>Check if you need permission or approval</strong></br>
+                                Avoid costly penalties by checking if you need building regulations approval.</p>
                             </a>
-                            <a href="#step2" >
+                            <a href="#step2">
                                 <span class="steps--number">2</span>
-                                <strong>Find good builders or contractors</strong></br>
-                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.
+                                <p><strong>Find good builders or contractors</strong></br>
+                                Don’t just rely on what it says on contractors’ websites.</p>
                             </a>
-                            <a href="#step3" >
+                            <a href="#step3">
                                 <span class="steps--number">3</span>
-                                <strong>Get quotes before you decide who to use</strong></br>
-                                Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.
+                                <p><strong>Get quotes before you decide who to use</strong></br>
+                                Check you’re getting a fair price by getting at least 3 quotes before you decide.</p>
                             </a>
-                            <a href="#step4" >
+                            <a href="#step4">
                                 <span class="steps--number">4</span>
-                                <strong>Check there’s insurance in place</strong></br>
-                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.
+                                <p><strong>Check there’s insurance in place</strong></br>
+                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong.</p>
                             </a>
-                            <a href="#step5" >
+                            <a href="#step5">
                                 <span class="steps--number">5</span>
-                                <strong>Get a written contract</strong></br>
-                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.
+                                <p><strong>Get a written contract</strong></br>
+                                Avoid disputes later by getting agreement in writing.</p>
                             </a>
                             <a href="#step6">
                                 <span class="steps--number">6</span>
-                                <strong>Be prepared to deal with problems</strong></br>
-                                Speak to contractors as soon as problems come up, and get them to agree to put them right.
+                                <p><strong>Be prepared to deal with problems</strong></br>
+                                Speak to contractors as soon as problems come up.</p>
                             </a>
                         </div>
 
@@ -645,7 +644,7 @@
                 </ul>
 
                 <div class="steps--navigation sticker">
-                    <h4>Steps in this guide</h4>
+                    <a href="#overview"><h4>Steps in this guide</h4></a>
                     <ul>
                         <li>
                             <a href="#step1" class="steps--navigation__link"><span>1</span>Check if you need permission or approval</a>
@@ -673,74 +672,58 @@
                     </ul>
                 </div>
 
-                <ul class="o2fixed">
-                    <li class="o2fixed__link">
-                        <span class="#step1"><strong>Step 1:</strong> Check if you need permission or approval</span>
+                <ul class="steps--navigation--fixed">
+                    <li class="steps--navigation--fixed__link">
+                        <span class="#step1"><strong>1</strong> Check if you need permission or approval</span>
                     </li>
 
-                    <li class="o2fixed__link">
-                        <span class="#step2"><strong>Step 2:</strong> Find good builders or contractors</span>
+                    <li class="steps--navigation--fixed__link">
+                        <span class="#step2"><strong>2</strong> Find good builders or contractors</span>
                     </li>
 
-                    <li class="o2fixed__link">
-                        <span class="#step3"><strong>Step 3:</strong> Get quotes before you decide who to use</span>
+                    <li class="steps--navigation--fixed__link">
+                        <span class="#step3"><strong>3</strong> Get quotes before you decide who to use</span>
                     </li>
 
-                    <li class="o2fixed__link">
-                        <span class="#step4"><strong>Step 4:</strong> Check there’s insurance in place</span>
+                    <li class="steps--navigation--fixed__link">
+                        <span class="#step4"><strong>4</strong> Check there’s insurance in place</span>
                     </li>
 
-                    <li class="o2fixed__link">
-                        <span class="#step5"><strong>Step 5:</strong> Get a written contract</span>
+                    <li class="steps--navigation--fixed__link">
+                        <span class="#step5"><strong>5</strong> Get a written contract</span>
                     </li>
 
-                    <li class="o2fixed__link">
-                        <span class="#step6"><strong>Step 6:</strong> Be prepared to deal with problems</span>
+                    <li class="steps--navigation--fixed__link">
+                        <span class="#step6"><strong>6</strong> Be prepared to deal with problems</span>
                     </li>
                 </ul>
 
-                <ul class="o2mobile">
-                    <li class="o2mobile__link close">
-                        <a class="">Close</a>
+                <ul class="steps--navigation--overlay">
+                    <li class="steps--navigation--overlay__link close">
+                        <a>Steps in this guide</a>
                     </li>
-                    <li class="beta-dap-menu-accordion__section has-sub -active -open">
-                        <a class="beta-dap-menu-accordion__link">Builders and home improvements</a>
+                    <li class="steps--navigation--overlay__link">
+                        <a href="#step1"><strong>1</strong> Check if you need permission or approval</a>
+                    </li>
 
-                        <ul class="beta-dap-menu-accordion__pages">
-                            <li class="beta-dap-menu-accordion__page -current">
-                                <a class="beta-dap-menu-accordion__link" href="">Before you get work done on your home</a>
+                    <li class="steps--navigation--overlay__link">
+                        <a href="#step2"><strong>2</strong> Find good builders or contractors</a>
+                    </li>
 
-                                <ul class="o2mobile--sub">
-                                    <li class="o2mobile__link">
-                                        <a class="" href="#step1"><strong>Step 1:</strong> Check if you need permission or approval</a>
-                                    </li>
+                    <li class="steps--navigation--overlay__link">
+                        <a href="#step3"><strong>3</strong> Get quotes before you decide who to use</a>
+                    </li>
 
-                                    <li class="o2mobile__link">
-                                        <a class="" href="#step2"><strong>Step 2:</strong> Find good builders or contractors</a>
-                                    </li>
+                    <li class="steps--navigation--overlay__link">
+                        <a href="#step4"><strong>4</strong> Check there’s insurance in place</a>
+                    </li>
 
-                                    <li class="o2mobile__link">
-                                        <a class="" href="#step3"><strong>Step 3:</strong> Get quotes before you decide who to use</a>
-                                    </li>
+                    <li class="steps--navigation--overlay__link">
+                        <a href="#step5"><strong>5</strong> Get a written contract</a>
+                    </li>
 
-                                    <li class="o2mobile__link">
-                                        <a class="" href="#step4"><strong>Step 4:</strong> Check there’s insurance in place</a>
-                                    </li>
-
-                                    <li class="o2mobile__link">
-                                        <a class="" href="#step5"><strong>Step 5:</strong> Get a written contract</a>
-                                    </li>
-
-                                    <li class="o2mobile__link">
-                                        <a class="" href="#step6"><strong>Step 6:</strong> Be prepared to deal with problems</a>
-                                    </li>
-                                </ul>
-                            </li>
-
-                            <li class="beta-dap-menu-accordion__page">
-                                <a class="beta-dap-menu-accordion__link" href="">Problems with home improvements</a>
-                            </li>
-                        </ul>
+                    <li class="steps--navigation--overlay__link">
+                        <a href="#step6"><strong>6</strong> Be prepared to deal with problems</a>
                     </li>
                 </ul>
             </nav>
